WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201644
Hangs on Swiss.com due to the web process being blocked on StorageAreaMap::LoadValuesIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=201644
Summary
Hangs on Swiss.com due to the web process being blocked on StorageAreaMap::Lo...
Chris Dumez
Reported
2019-09-10 08:39:10 PDT
We see ~1s hangs on Swiss.com (during page loading) due to the web process being blocked on StorageAreaMap::LoadValuesIfNeeded sync IPC with the network process and not processing the WebPage::GetPositionInformation sync IPC from the UIProcess.
Attachments
Patch
(2.35 KB, patch)
2019-09-10 08:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-10 08:39:24 PDT
<
rdar://problem/54942761
>
Chris Dumez
Comment 2
2019-09-10 08:41:34 PDT
Created
attachment 378466
[details]
Patch
Geoffrey Garen
Comment 3
2019-09-10 10:55:04 PDT
Comment on
attachment 378466
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-09-10 11:14:21 PDT
Comment on
attachment 378466
[details]
Patch Clearing flags on attachment: 378466 Committed
r249723
: <
https://trac.webkit.org/changeset/249723
>
WebKit Commit Bot
Comment 5
2019-09-10 11:14:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug