Cherry-pick r249723. rdar://problem/55291687

Hangs on Swiss.com due to the web process being blocked on StorageAreaMap::LoadValuesIfNeeded
    https://bugs.webkit.org/show_bug.cgi?id=201644
    <rdar://problem/54942761>

    Reviewed by Geoffrey Garen.

    Mark the StorageManagerSet::GetValues sync IPC from the WebContent process to the Network
    process with a UnboundedSynchronousIPCScope so that it will process critical sync IPC
    from the UIProcess (such as WebPage::GetPositionInformation) while waiting for a reply.

    * WebProcess/WebStorage/StorageAreaMap.cpp:
    (WebKit::StorageAreaMap::loadValuesIfNeeded):

    Canonical link: https://commits.webkit.org/215294@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249723 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.354@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@249991 268f45cc-cd09-0410-ab3c-d52691b4dbfc